syntax="proto3";

package storehouse_supplier_service;
option go_package="genproto/storehouse_supplier_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service TenderSupplierService {
    rpc CreateTenderSupplier(CreateTenderSupplierRequest) returns (TenderSupplier) {}
    rpc GetByIDTenderSupplier(TenderSupplierPrimaryKey) returns (TenderSupplier) {}
    rpc GetListTenderSupplier(GetListTenderSupplierRequest) returns (GetListTenderSupplierResponse) {}
    rpc UpdateTenderSupplier(UpdateTenderSupplierRequest) returns (TenderSupplier) {}
    rpc UpdatePatchTenderSupplier(UpdatePatchTenderSupplierRequest) returns (TenderSupplier) {}
    rpc DeleteTenderSupplier(TenderSupplierPrimaryKey) returns (google.protobuf.Empty) {}
}

message TenderSupplierPrimaryKey {
    string id = 1;
}

message TenderSupplier {
    string id = 1;
    string tender_supplier_number = 2;
    double price = 3;
    double supplier_balance = 4;
    string currency = 5;
    string metrics = 6;
    string type = 7;
    string description = 8;
    string supplier_id = 9;
    string created_at = 10;
    string updated_at = 11;
}

message CreateTenderSupplierRequest {
    string tender_supplier_number = 1;
    double price = 2;
    double supplier_balance = 3;
    string currency = 4;
    string metrics = 5;
    string type = 6;
    string description = 7;
    string supplier_id = 8;
}

message UpdateTenderSupplierRequest {
    string id = 1;
    string tender_supplier_number = 2;
    double price = 3;
    double supplier_balance = 4;
    string currency = 5;
    string metrics = 6;
    string type = 7;
    string description = 8;
    string supplier_id = 9;
}

message UpdatePatchTenderSupplierRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListTenderSupplierRequest {
    int32 limit = 1;
    int32 page = 2;
    string search = 3;
    string where_query = 4;
    google.protobuf.Struct filters = 5;
}

message GetListTenderSupplierResponse {
    int32 count = 1;
    repeated TenderSupplier tender_suppliers = 2;
}
